--- a/mSystems/mSys_MandM.tex
+++ b/mSystems/mSys_MandM.tex
@@ -66,7 +66,7 @@ We selected genus as taxonomic level for the subsequent steps of our work. In or
   \includegraphics[width=0.5\textwidth]{results/taxalevel/xWb_gen_16S.pdf}
   \includegraphics[width=0.5\textwidth]{results/taxalevel/xWb_gen_SMS.pdf}
   \includegraphics[width=0.5\textwidth]{results/taxalevel/xWb_spc_SMS.pdf}
-\caption{Detail of comparison of different approaches based on adjacent taxonomic levels using plots of X-weighted power-law fits (see Section \ref{sec:X-w}). The former row of subfigures shows examples for 16S, whereas the latter row of subfigures plots examples for SMS. The left column shows results for the superior taxonomic level (family for 16S, genus for SMS), while the right column shows results for the inferior level (genus for 16S, specie for SMS).}
+\caption{Detail of comparison of different approaches based on adjacent taxonomic levels using plots of X-weighted power-law fits (see Material and Methods). The former row of subfigures shows examples for 16S, whereas the latter row of subfigures plots examples for SMS. The left column shows results for the superior taxonomic level (family for 16S, genus for SMS), while the right column shows results for the inferior level (genus for 16S, specie for SMS).}
 \label{fig:taxlev2}
 \end{figure}
 
